comparing pandas df filter performance with naive loop method

--- a/insights-old.ipynb
+++ b/insights-old.ipynb
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {
     "scrolled": false
    },
@@ -1013,10 +1013,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fd68f44f320>"
+       "<matplotlib.legend.Legend at 0x7f41299ac630>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1654,19 +1654,11 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/zero/PycharmProjects/jupyter/venv/lib/python3.7/site-packages/pandas/core/ops.py:1649: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  result = method(y)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Candidate': 'SHANKAR LALWANI', 'Total Votes': 1068569, 'Constituency': 'INDORE'} \n",
-      " {'Candidate': 'QUEEN OJA', 'Total Votes': 1008936, 'Constituency': 'Gauhati'}\n"
+      "{'name': 'SHANKAR LALWANI', 'total_votes': 1068569, 'constituency': 'INDORE.csv'} \n",
+      " {'name': 'QUEEN OJA', 'total_votes': 1008936, 'constituency': 'Gauhati.csv'}\n"
      ]
     }
    ],
@@ -1677,23 +1669,20 @@
     "for state in states:\n",
     "    constituencies = os.listdir(path+\"/\"+state)\n",
     "    for constituency in constituencies:\n",
-    "        df = pd.read_csv(path+state+\"/\"+constituency).drop(axis=1,columns=[\"SN\",\"EVM Votes\",\"Postal Votes\"])\n",
-    "        df = df[df[\"Party\"] =='Bharatiya Janata Party']\n",
-    "        for ind, row in df.iterrows():\n",
-    "            if not starCandDict:\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "                secondStar = starCandDict.copy()\n",
-    "            elif row[\"Total Votes\"]>starCandDict[\"Total Votes\"]:\n",
-    "                secondStar = starCandDict.copy()\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "            elif row[\"Total Votes\"]>secondStar[\"Total Votes\"]:\n",
-    "                secondStar[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                secondStar[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                secondStar[\"Constituency\"] = constituency.split(\".\")[0]\n",
+    "        with open(path+state+\"/\"+constituency, \"r\") as csvfile:\n",
+    "            reader = csv.reader(csvfile,delimiter=\",\")\n",
+    "            for row in reader:\n",
+    "                if row[2] == 'Bharatiya Janata Party':\n",
+    "                    if not starCandDict:\n",
+    "                        starCandDict[\"name\"] = row[1]\n",
+    "                        starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                        starCandDict[\"constituency\"] = constituency\n",
+    "                    else:\n",
+    "                        if int(row[5]) > starCandDict[\"total_votes\"]:\n",
+    "                            secondStar = starCandDict.copy()\n",
+    "                            starCandDict[\"name\"] = row[1]\n",
+    "                            starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                            starCandDict[\"constituency\"] = constituency\n",
     "print(starCandDict, \"\\n\",secondStar)"
    ]
   },
@@ -1706,8 +1695,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Candidate': 'D.K. SURESH', 'Total Votes': 878258, 'Constituency': 'Bangalore_Rural'} \n",
-      " {'Candidate': 'Gaurav Gogoi', 'Total Votes': 786092, 'Constituency': 'Kaliabor'}\n"
+      "{'name': 'D.K. SURESH', 'total_votes': 878258, 'constituency': 'Bangalore_Rural.csv'} \n",
+      " {'name': 'B N CHANDRAPPA', 'total_votes': 546017, 'constituency': 'Chitradurga.csv'}\n"
      ]
     }
    ],
@@ -1719,37 +1708,34 @@
     "for state in states:\n",
     "    constituencies = os.listdir(path+\"/\"+state)\n",
     "    for constituency in constituencies:\n",
-    "        df = pd.read_csv(path+state+\"/\"+constituency).drop(axis=1,columns=[\"SN\",\"EVM Votes\",\"Postal Votes\"])\n",
-    "        df = df[df[\"Party\"] =='Indian National Congress']\n",
-    "        for ind, row in df.iterrows():\n",
-    "            if not starCandDict:\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "                secondStar = starCandDict.copy()\n",
-    "            elif row[\"Total Votes\"]>starCandDict[\"Total Votes\"]:\n",
-    "                secondStar = starCandDict.copy()\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "            elif row[\"Total Votes\"]>secondStar[\"Total Votes\"]:\n",
-    "                secondStar[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                secondStar[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                secondStar[\"Constituency\"] = constituency.split(\".\")[0]\n",
+    "        with open(path+state+\"/\"+constituency, \"r\") as csvfile:\n",
+    "            reader = csv.reader(csvfile,delimiter=\",\")\n",
+    "            for row in reader:\n",
+    "                if row[2] == 'Indian National Congress':\n",
+    "                    if not starCandDict:\n",
+    "                        starCandDict[\"name\"] = row[1]\n",
+    "                        starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                        starCandDict[\"constituency\"] = constituency\n",
+    "                    else:\n",
+    "                        if int(row[5]) > starCandDict[\"total_votes\"]:\n",
+    "                            secondStar = starCandDict.copy()\n",
+    "                            starCandDict[\"name\"] = row[1]\n",
+    "                            starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                            starCandDict[\"constituency\"] = constituency\n",
     "print(starCandDict, \"\\n\",secondStar)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Candidate': 'NATARAJAN. P.R', 'Total Votes': 571150, 'Constituency': 'Coimbatore'} \n",
-      " {'Candidate': 'VENKATESAN S', 'Total Votes': 447075, 'Constituency': 'Madurai'}\n"
+      "{'name': 'NATARAJAN. P.R', 'total_votes': 571150, 'constituency': 'Coimbatore.csv', 'party': 'Communist Party of India (Marxist)'} \n",
+      " {'name': 'Jitendra Chaudhury', 'total_votes': 200963, 'constituency': 'Tripura_East.csv', 'party': 'Communist Party of India (Marxist)'}\n"
      ]
     }
    ],
@@ -1761,29 +1747,26 @@
     "for state in states:\n",
     "    constituencies = os.listdir(path+\"/\"+state)\n",
     "    for constituency in constituencies:\n",
-    "        df = pd.read_csv(path+state+\"/\"+constituency).drop(axis=1,columns=[\"SN\",\"EVM Votes\",\"Postal Votes\"])\n",
-    "        df = df[df[\"Party\"] =='Communist Party of India (Marxist)']\n",
-    "        for ind, row in df.iterrows():\n",
-    "            if not starCandDict:\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "                secondStar = starCandDict.copy()\n",
-    "            elif row[\"Total Votes\"]>starCandDict[\"Total Votes\"]:\n",
-    "                secondStar = starCandDict.copy()\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "            elif row[\"Total Votes\"]>secondStar[\"Total Votes\"]:\n",
-    "                secondStar[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                secondStar[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                secondStar[\"Constituency\"] = constituency.split(\".\")[0]\n",
+    "        with open(path+state+\"/\"+constituency, \"r\") as csvfile:\n",
+    "            reader = csv.reader(csvfile,delimiter=\",\")\n",
+    "            for row in reader:\n",
+    "                if row[2] == 'Communist Party of India (Marxist)':\n",
+    "                    if not starCandDict:\n",
+    "                        starCandDict[\"name\"] = row[1]\n",
+    "                        starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                        starCandDict[\"constituency\"] = constituency\n",
+    "                    else:\n",
+    "                        if int(row[5]) > starCandDict[\"total_votes\"]:\n",
+    "                            secondStar = starCandDict.copy()\n",
+    "                            starCandDict[\"name\"] = row[1]\n",
+    "                            starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                            starCandDict[\"constituency\"] = constituency\n",
     "print(starCandDict, \"\\n\",secondStar)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1971,7 +1954,7 @@
        "11          8178      1225594         NaN  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1983,15 +1966,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Candidate': 'SELVARAJ M', 'Total Votes': 522892, 'Constituency': 'Nagapattinam'} \n",
-      " {'Candidate': 'SUBBARAYAN, K.', 'Total Votes': 508725, 'Constituency': 'Tiruppur'}\n"
+      "{'name': 'SELVARAJ M', 'total_votes': 522892, 'constituency': 'Nagapattinam.csv'} \n",
+      " {'name': 'SUBBARAYAN, K.', 'total_votes': 508725, 'constituency': 'Tiruppur.csv'}\n"
      ]
     }
    ],
@@ -2003,37 +1986,34 @@
     "for state in states:\n",
     "    constituencies = os.listdir(path+\"/\"+state)\n",
     "    for constituency in constituencies:\n",
-    "        df = pd.read_csv(path+state+\"/\"+constituency).drop(axis=1,columns=[\"SN\",\"EVM Votes\",\"Postal Votes\"])\n",
-    "        df = df[df[\"Party\"] =='Communist Party of India']\n",
-    "        for ind, row in df.iterrows():\n",
-    "            if not starCandDict:\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "                secondStar = starCandDict.copy()\n",
-    "            elif row[\"Total Votes\"]>starCandDict[\"Total Votes\"]:\n",
-    "                secondStar = starCandDict.copy()\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "            elif row[\"Total Votes\"]>secondStar[\"Total Votes\"]:\n",
-    "                secondStar[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                secondStar[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                secondStar[\"Constituency\"] = constituency.split(\".\")[0]\n",
+    "        with open(path+state+\"/\"+constituency, \"r\") as csvfile:\n",
+    "            reader = csv.reader(csvfile,delimiter=\",\")\n",
+    "            for row in reader:\n",
+    "                if row[2] == 'Communist Party of India':\n",
+    "                    if not starCandDict:\n",
+    "                        starCandDict[\"name\"] = row[1]\n",
+    "                        starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                        starCandDict[\"constituency\"] = constituency\n",
+    "                    else:\n",
+    "                        if int(row[5]) > starCandDict[\"total_votes\"]:\n",
+    "                            secondStar = starCandDict.copy()\n",
+    "                            starCandDict[\"name\"] = row[1]\n",
+    "                            starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                            starCandDict[\"constituency\"] = constituency\n",
     "print(starCandDict, \"\\n\",secondStar)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Candidate': 'NOTA', 'Total Votes': 51660, 'Constituency': 'Gopalganj_(SC)'} \n",
-      " {'Candidate': 'NOTA', 'Total Votes': 47977, 'Constituency': 'Aruku'}\n"
+      "{'name': 'NOTA', 'total_votes': 51660, 'constituency': 'Gopalganj_(SC).csv'} \n",
+      " {'name': 'NOTA', 'total_votes': 44582, 'constituency': 'Nabarangpur.csv'}\n"
      ]
     }
    ],
@@ -2045,37 +2025,34 @@
     "for state in states:\n",
     "    constituencies = os.listdir(path+\"/\"+state)\n",
     "    for constituency in constituencies:\n",
-    "        df = pd.read_csv(path+state+\"/\"+constituency).drop(axis=1,columns=[\"SN\",\"EVM Votes\",\"Postal Votes\"])\n",
-    "        df = df[df[\"Party\"] =='None of the Above']\n",
-    "        for ind, row in df.iterrows():\n",
-    "            if not starCandDict:\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "                secondStar = starCandDict.copy()\n",
-    "            elif row[\"Total Votes\"]>starCandDict[\"Total Votes\"]:\n",
-    "                secondStar = starCandDict.copy()\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "            elif row[\"Total Votes\"]>secondStar[\"Total Votes\"]:\n",
-    "                secondStar[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                secondStar[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                secondStar[\"Constituency\"] = constituency.split(\".\")[0]\n",
+    "        with open(path+state+\"/\"+constituency, \"r\") as csvfile:\n",
+    "            reader = csv.reader(csvfile,delimiter=\",\")\n",
+    "            for row in reader:\n",
+    "                if row[2] == 'None of the Above':\n",
+    "                    if not starCandDict:\n",
+    "                        starCandDict[\"name\"] = row[1]\n",
+    "                        starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                        starCandDict[\"constituency\"] = constituency\n",
+    "                    else:\n",
+    "                        if int(row[5]) > starCandDict[\"total_votes\"]:\n",
+    "                            secondStar = starCandDict.copy()\n",
+    "                            starCandDict[\"name\"] = row[1]\n",
+    "                            starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                            starCandDict[\"constituency\"] = constituency\n",
     "print(starCandDict, \"\\n\",secondStar)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Candidate': 'SUMALATHA AMBAREESH', 'Total Votes': 703660, 'Constituency': 'Mandya'} \n",
-      " {'Candidate': 'Navnit Ravi Rana', 'Total Votes': 510947, 'Constituency': 'Amravati'}\n"
+      "{'name': 'SUMALATHA AMBAREESH', 'total_votes': 703660, 'constituency': 'Mandya.csv'} \n",
+      " {'name': 'DHAREPPA MAHADEV ARDHAVAR', 'total_votes': 23706, 'constituency': 'Bijapur.csv'}\n"
      ]
     }
    ],
@@ -2087,23 +2064,20 @@
     "for state in states:\n",
     "    constituencies = os.listdir(path+\"/\"+state)\n",
     "    for constituency in constituencies:\n",
-    "        df = pd.read_csv(path+state+\"/\"+constituency).drop(axis=1,columns=[\"SN\",\"EVM Votes\",\"Postal Votes\"])\n",
-    "        df = df[df[\"Party\"] =='Independent']\n",
-    "        for ind, row in df.iterrows():\n",
-    "            if not starCandDict:\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "                secondStar = starCandDict.copy()\n",
-    "            elif row[\"Total Votes\"]>starCandDict[\"Total Votes\"]:\n",
-    "                secondStar = starCandDict.copy()\n",
-    "                starCandDict[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                starCandDict[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "            elif row[\"Total Votes\"]>secondStar[\"Total Votes\"]:\n",
-    "                secondStar[\"Candidate\"] = row[\"Candidate\"]\n",
-    "                secondStar[\"Total Votes\"] = row[\"Total Votes\"]\n",
-    "                secondStar[\"Constituency\"] = constituency.split(\".\")[0]\n",
+    "        with open(path+state+\"/\"+constituency, \"r\") as csvfile:\n",
+    "            reader = csv.reader(csvfile,delimiter=\",\")\n",
+    "            for row in reader:\n",
+    "                if row[2] == 'Independent':\n",
+    "                    if not starCandDict:\n",
+    "                        starCandDict[\"name\"] = row[1]\n",
+    "                        starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                        starCandDict[\"constituency\"] = constituency\n",
+    "                    else:\n",
+    "                        if int(row[5]) > starCandDict[\"total_votes\"]:\n",
+    "                            secondStar = starCandDict.copy()\n",
+    "                            starCandDict[\"name\"] = row[1]\n",
+    "                            starCandDict[\"total_votes\"] = int(row[5])\n",
+    "                            starCandDict[\"constituency\"] = constituency\n",
     "print(starCandDict, \"\\n\",secondStar)"
    ]
   },
