few more insights

--- a/insights.ipynb
+++ b/insights.ipynb
@@ -1013,7 +1013,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fd68f44f320>"
+       "<matplotlib.legend.Legend at 0x7fc62b90f208>"
       ]
      },
      "execution_count": 10,
@@ -2067,9 +2067,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/zero/PycharmProjects/jupyter/venv/lib/python3.7/site-packages/pandas/core/ops.py:1649: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  result = method(y)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -2104,7 +2112,129 @@
     "                secondStar[\"Candidate\"] = row[\"Candidate\"]\n",
     "                secondStar[\"Total Votes\"] = row[\"Total Votes\"]\n",
     "                secondStar[\"Constituency\"] = constituency.split(\".\")[0]\n",
-    "print(starCandDict, \"\\n\",secondStar)"
+    "print(starCandDict, \"\\n\",secondStar)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 10, 11, 12]"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"./constituencyWise2/West_Bengal/Jadavpur.csv\").drop(axis=1,columns=[\"SN\",\"EVM Votes\",\"Postal Votes\"])\n",
+    "df.drop(axis=0, index=df.tail(1).index,inplace=True)\n",
+    "idm = df[\"Total Votes\"].idxmax()\n",
+    "l = list(df[df[\"Party\"]==\"Independent\"].index.values.astype(int))\n",
+    "idm \n",
+    "l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop(axis=0, index=14)\n",
+    "\n",
+    "idm = df[\"Total Votes\"].idxmax()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l = list(df[df[\"Party\"]==\"Independent\"].index.values.astype(int))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "idm in l"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Candidate': 'SUMALATHA AMBAREESH', 'Total Votes': 703660, 'Constituency': 'Mandya'}\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "\n",
+      "{'Candidate': 'DELKAR MOHANBHAI SANJIBHAI', 'Total Votes': 90421, 'Constituency': 'Dadra_And_Nagar_Haveli'}\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "\n",
+      "{'Candidate': 'Naba Kumar Sarania', 'Total Votes': 484560, 'Constituency': 'Kokrajhar'}\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "\n",
+      "{'Candidate': 'Navnit Ravi Rana', 'Total Votes': 510947, 'Constituency': 'Amravati'}\n",
+      "\n",
+      "\n",
+      "====================\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#let's find out all (4) independent candidates who won seats in Lok Sabha\n",
+    "#and star independent candidate across India\n",
+    "path = \"./constituencyWise2/\"\n",
+    "\n",
+    "listCand = []\n",
+    "for state in states:\n",
+    "    constituencies = os.listdir(path+\"/\"+state)\n",
+    "    for constituency in constituencies:\n",
+    "        starCandDict = dict() #reallocating dict is important :|\n",
+    "        df = pd.read_csv(path+state+\"/\"+constituency).drop(axis=1,columns=[\"SN\",\"EVM Votes\",\"Postal Votes\"])\n",
+    "        df.drop(axis=0, index=df.tail(1).index,inplace=True)\n",
+    "        idm = df[\"Total Votes\"].idxmax()\n",
+    "        if df.loc[idm][\"Party\"]==\"Independent\":\n",
+    "            starCandDict[\"Candidate\"] = df.loc[idm][\"Candidate\"]\n",
+    "            starCandDict[\"Total Votes\"] = df.loc[idm][\"Total Votes\"]\n",
+    "            starCandDict[\"Constituency\"] = constituency.split(\".\")[0]\n",
+    "            listCand.append(starCandDict)\n",
+    "        \n",
+    "            \n",
+    "for cand in listCand:\n",
+    "    print(cand)\n",
+    "    print(\"\\n\\n====================\\n\")"
    ]
   },
   {
